--- a/inventory/hosts.ini
+++ b/inventory/hosts.ini
@@ -1,18 +1,22 @@
 # ## Configure 'ip' variable to bind kubernetes services on a
 # ## different ip than the default iface
 [all]
-control-plane3 ansible_host=192.168.0.79 ip=192.168.0.79
-control-plane2 ansible_host=192.168.0.78 ip=192.168.0.78
-control-plane1 ansible_host=192.168.0.77 ip=192.168.0.77
-compute-plane3 ansible_host=192.168.0.82 ip=192.168.0.82
-compute-plane2 ansible_host=192.168.0.81 ip=192.168.0.81
-compute-plane1 ansible_host=192.168.0.80 ip=192.168.0.80
-compute-plane5 ansible_host=192.168.0.84 ip=192.168.0.84
-compute-plane4 ansible_host=192.168.0.83 ip=192.168.0.83
-compute-plane6 ansible_host=192.168.0.85 ip=192.168.0.85
+control-plane3 ansible_host=192.168.0.79
+control-plane2 ansible_host=192.168.0.78
+control-plane1 ansible_host=192.168.0.77
+compute-plane3 ansible_host=192.168.0.82
+compute-plane2 ansible_host=192.168.0.81
+compute-plane1 ansible_host=192.168.0.80
+compute-plane5 ansible_host=192.168.0.84
+compute-plane4 ansible_host=192.168.0.83
+compute-plane6 ansible_host=192.168.0.85
 
 # ## configure a bastion host if your nodes are not directly reachable
 # bastion ansible_host=x.x.x.x ansible_user=some_user
+[master]
+# ansible master host. Always localhost
+127.0.0.1
+
 [control-plane]
 control-plane[1:3]
 
