--- a/ansible.cfg
+++ b/ansible.cfg
@@ -14,5 +14,6 @@ roles_path = roles:kubespray/roles
 deprecation_warnings=False
 inventory_ignore_extensions = ~, .orig, .bak, .ini, .cfg, .retry, .pyc, .pyo, .creds
 timeout=30
+jinja2_extensions = jinja2.ext.loopcontrols
 [inventory]
-ignore_patterns = artifacts, credentials
+ignore_patterns = artifacts, credentials, helm_vars
