--- a/roles/deploy_osh/tasks/gen_password.yaml
+++ b/roles/deploy_osh/tasks/gen_password.yaml
@@ -7,17 +7,18 @@
   - "{{endpoint.value.auth}}"
   when: "endpoint.key != 'ceph_object_store' and item.key != 'user'"
 
-- name: "Get password for {{endpoint.key}}"
-  set_fact: 
-    "{{endpoint.key}}_{{item.key}}": "{{ lookup('file', inventory_dir+'/credentials/'+endpoint.key+'_'+item.key+'.creds') }}"
-  with_dict:
-  - "{{endpoint.value.auth}}"
-
 # Exception for rabbitmq username 'user' 
 - name: Get password for rabbitmq 'user'
   set_fact: 
-    "oslo_messaging_user": "{{ lookup('file', inventory_dir+'/credentials/oslo_messaging_admin.creds') }}"
+    "oslo_messaging_user_pwd": "{{ lookup('file', inventory_dir+'/credentials/oslo_messaging_admin.creds') }}"
   when: "endpoint.key == 'oslo_messaging'"
+
+- name: "Get password for {{endpoint.key}}"
+  set_fact: 
+    "{{endpoint.key}}_{{item.key}}_pwd": "{{ lookup('file', inventory_dir+'/credentials/'+endpoint.key+'_'+item.key+'.creds') }}"
+  with_dict:
+  - "{{endpoint.value.auth}}"
+  when: "item.key != 'user'"
 
 - name: "Passwords for {{endpoint.key}}"
   block:
@@ -31,7 +32,7 @@
     - ['access_key', 'secret_key']
   - name: "Get password for {{endpoint.key}}"
     set_fact:
-      "{{endpoint.key}}_{{item.0}}_{{item.1}}": "{{lookup('file', inventory_dir+'/credentials/'+endpoint.key+'_'+item.0+'_'+item.1+'.creds')}}"
+      "{{endpoint.key}}_{{item.0}}_{{item.1}}_pwd": "{{lookup('file', inventory_dir+'/credentials/'+endpoint.key+'_'+item.0+'_'+item.1+'.creds')}}"
     with_nested:
     - "{{endpoint.value.auth|list}}"
     - ['access_key', 'secret_key']
