--- a/inventory/helm_vars/components.yaml
+++ b/inventory/helm_vars/components.yaml
@@ -1,28 +1,32 @@
+---
 OSH_CORE:
 - name: ingress-kube-system
-  path: openstack-helm-infra/ingress/
+  path: openstack-helm-infra/ingress
   namespace: kube-system
 - name: ingress-openstack
-  path: openstack-helm-infra/ingress/
+  path: openstack-helm-infra/ingress
   namespace: openstack
 - name: ingress-ceph
-  path: openstack-helm-infra/ingress/
+  path: openstack-helm-infra/ingress
   namespace: ceph
 - name: ingress-contrail
-  path: openstack-helm-infra/ingress/
+  path: openstack-helm-infra/ingress
   namespace: contrail
-#- name: ceph-mon
-#  path: openstack-helm-infra//
-#  namespace: ceph
-#- name: ceph-osd
-#  path:
-#  namespace: ceph
-#- name: ceph-client
-#  path:
-#  namespace: ceph
-#- name: ceph-provisioners
-#  path:
-#  namespace: ceph
+- name: ceph-mon
+  path: openstack-helm-infra/ceph-mon
+  namespace: ceph
+- name: ceph-osd
+  path: openstack-helm-infra/ceph-osd
+  namespace: ceph
+- name: ceph-client
+  path: openstack-helm-infra/ceph-client
+  namespace: ceph
+- name: ceph-provisioners
+  path: openstack-helm-infra/ceph-provisioners
+  namespace: ceph
+- name: ceph-openstack-config
+  path: openstack-helm-infra/ceph-provisioners
+  namespace: openstack
 #- name: mariadb
 #  path:
 #  namespace: openstack
