--- a/roles/deploy_osh/tasks/osh-core.yaml
+++ b/roles/deploy_osh/tasks/osh-core.yaml
@@ -14,11 +14,11 @@
   with_items:
   - "{{components.OSH_CORE}}"
 - name: Deploy OSH CORE
-  shell: "{{helm_bin}} upgrade --install {{item.name}} {{playbook_dir}}/{{item.path}} \
-         --namespace={{item.namespace}} \
+  shell: "{{helm_bin}} upgrade --install {{item['item']['name']}} {{playbook_dir}}/{{item['item']['path']}} \
+         --namespace={{item['item']['namespace']}} \
          --values={{inventory_dir}}/artifacts/helm_vars_common.yaml \
-         --values={{inventory_dir}}/artifacts/helm_vars_{{item.name}}.yaml && \
-         {{playbook_dir}}/openstack-helm/tools/deployment/common/wait-for-pods.sh {{item.namespace}}"
+         --values={{inventory_dir}}/artifacts/helm_vars_{{item['item']['name']}}.yaml && \
+         {{playbook_dir}}/openstack-helm/tools/deployment/common/wait-for-pods.sh {{item['item']['namespace']}}"
   with_items:
-  - "{{components.OSH_CORE}}"
-  when: "helm_vars_common_gen_res.changed or helm_OSH_CORE_gen_res.changed"
+  - "{{helm_OSH_CORE_gen_res.results}}"
+  when: "helm_vars_common_gen_res.changed or item.changed"
