--- a/roles/prepare-node/tasks/post-k8s.yaml
+++ b/roles/prepare-node/tasks/post-k8s.yaml
@@ -12,20 +12,14 @@
   - "{{ compute_plane_labels }}"
   ignore_errors: yes
 - name: Set k8s node environment (compute)
-  shell: "kubectl label node --overwrite {{ item }} compute-env={% if item in groups['dev-compute'] %}dev{% else %}prod{% endif %}"
-  with_items:
+  shell: "kubectl label node --overwrite {{ item.0 }} AZ={{item.1.name}}"
+  with_nested:
   - "{{ groups['compute-plane'] }}"
+  - "{{ join_areas.areas }}"
   ignore_errors: yes
-#- name: Set k8s node labels (osd)
-#  shell: "kubectl label node --overwrite {{ item.0.inventory_hostname }}  D{{item.1}}-J{{item.0.osd_jour}}-{% if item.0.inventory_hostname in groups['dev-osd-node'] %}Dev{% else %}Prod{% endif %}=enabled"
-#  with_subelements:
-#  - "{{groups['osd-nodes']| map('extract', hostvars) | list}}"
-#  - ansible_local.osd_disks
-#  ignore_errors: yes
-#  when: "item.1 != item.0.osd_jour"
+  when: "join_areas.enabled and item.0 in groups[item.1.name+'-compute']"
 - name: Set k8s node labels (osd)
   include: "osd-labels.yaml"
-#  include: "{{ role_path }}/tasks/osd-labels.yaml"
   with_items:
   - "{{groups['osd-nodes']}}"
   loop_control:
