--- a/roles/deploy_osh/tasks/gen_password.yaml
+++ b/roles/deploy_osh/tasks/gen_password.yaml
@@ -20,6 +20,7 @@
   - "{{endpoint.value.auth}}"
   when: "item.key != 'user'"
 
+# Exception for s3 passwords
 - name: "Passwords for {{endpoint.key}}"
   block:
   - name: "Gen password for {{endpoint.key}}"
