--- a/roles/deploy_osh/defaults/main.yml
+++ b/roles/deploy_osh/defaults/main.yml
@@ -1,2 +1,8 @@
 ---
-
+infra:
+  pool_name: cloud.infra
+glance:
+  pool_name: cloud.glance
+cinder:
+  pool_name: cloud.cinder
+  backup_pool_name: cloud.cinder.backup
