--- a/roles/deploy_osh/tasks/gen_password.yaml
+++ b/roles/deploy_osh/tasks/gen_password.yaml
@@ -5,12 +5,18 @@
     force: no
   with_dict:
   - "{{endpoint.value.auth}}"
-  when: "endpoint.key != 'ceph_object_store' and item.key != 'user'"
+  when: "endpoint.key != 'ceph_object_store' and item.key not in ['user', 'erlang_cookie']"
 
-# Exception for rabbitmq username 'user' 
-- name: Get password for rabbitmq 'user'
-  set_fact: 
-    "oslo_messaging_user_pwd": "{{ lookup('file', inventory_dir+'/credentials/oslo_messaging_admin.creds') }}"
+- name: Handle exceptions for rabbitmq
+  block:
+#  - name: "Gen password for {{endpoint.key}} - cookie"
+#    copy:
+#      content: "{%if gen_passwd %}{{lookup('password', '/dev/null chars=ascii_letters length=15')}}{%else%}{{endpoints[endpoint.key]['auth'][item.key]['cookie']}}{%endif%}"
+#      dest: "{{inventory_dir+'/credentials/'+endpoint.key+'_erlang_cookie.creds'}}"
+#      force: no
+  - name: Get password for rabbitmq endpoint 'user'
+    set_fact: 
+      "oslo_messaging_user_pwd": "{{ lookup('file', inventory_dir+'/credentials/oslo_messaging_admin.creds') }}"
   when: "endpoint.key == 'oslo_messaging'"
 
 - name: "Get password for {{endpoint.key}}"
