--- a/roles/deploy_osh/tasks/osh-core.yaml
+++ b/roles/deploy_osh/tasks/osh-core.yaml
@@ -13,12 +13,12 @@
     state: link
   with_items:
   - "{{components.OSH_CORE}}"
-#- name: Deploy OSH CORE
-#  shell: "{{helm_bin}} upgrade --install {{item['item']['name']}} {{playbook_dir}}/{{item['item']['path']}} \
-#         --namespace={{item['item']['namespace']}} \
-#         --values={{inventory_dir}}/artifacts/helm_vars_common.yaml \
-#         --values={{inventory_dir}}/artifacts/helm_vars_{{item['item']['name']}}.yaml && \
-#         {{playbook_dir}}/openstack-helm/tools/deployment/common/wait-for-pods.sh {{item['item']['namespace']}}"
-#  with_items:
-#  - "{{helm_OSH_CORE_gen_res.results}}"
-#  when: "helm_vars_common_gen_res.changed or item.changed"
+- name: Deploy OSH CORE
+  shell: "{{helm_bin}} upgrade --install {{item['item']['name']}} {{playbook_dir}}/{{item['item']['path']}} \
+         --namespace={{item['item']['namespace']}} \
+         --values={{inventory_dir}}/artifacts/helm_vars_common.yaml \
+         --values={{inventory_dir}}/artifacts/helm_vars_{{item['item']['name']}}.yaml && \
+         {{playbook_dir}}/openstack-helm/tools/deployment/common/wait-for-pods.sh {{item['item']['namespace']}}"
+  with_items:
+  - "{{helm_OSH_CORE_gen_res.results}}"
+  when: "helm_vars_common_gen_res.changed or item.changed"
