--- a/roles/deploy_osh/tasks/gen_password.yaml
+++ b/roles/deploy_osh/tasks/gen_password.yaml
@@ -1,30 +1,30 @@
-- name: "Gen password for {{endpoint.key}}"
-  copy:
-    content: "{%if gen_passwd %}{{lookup('password', '/dev/null chars=ascii_letters length=15')}}{%else%}{{endpoints[endpoint.key]['auth'][item.key]['password']}}{%endif%}"
-    dest: "{{inventory_dir+'/credentials/'+endpoint.key+'_'+item.key+'.creds'}}"
-    force: no
-  with_dict:
-  - "{{endpoint.value.auth}}"
-  when: "endpoint.key != 'ceph_object_store' and item.key not in ['user', 'erlang_cookie']"
-
-- name: Handle exceptions for rabbitmq
-  block:
-#  - name: "Gen password for {{endpoint.key}} - cookie"
-#    copy:
-#      content: "{%if gen_passwd %}{{lookup('password', '/dev/null chars=ascii_letters length=15')}}{%else%}{{endpoints[endpoint.key]['auth'][item.key]['cookie']}}{%endif%}"
-#      dest: "{{inventory_dir+'/credentials/'+endpoint.key+'_erlang_cookie.creds'}}"
-#      force: no
-  - name: Get password for rabbitmq endpoint 'user'
+- block:
+  - name: "Gen password for {{endpoint.key}}"
+    copy:
+      content: "{%if gen_passwd %}{{lookup('password', '/dev/null chars=ascii_letters length=15')}}{%else%}{{endpoints[endpoint.key]['auth'][item.key]['password']}}{%endif%}"
+      dest: "{{inventory_dir+'/credentials/'+endpoint.key+'_'+item.key+'.creds'}}"
+      force: no
+    with_dict:
+    - "{{endpoint.value.auth}}"
+  - name: "Get password for {{endpoint.key}}"
     set_fact: 
-      "oslo_messaging_user_pwd": "{{ lookup('file', inventory_dir+'/credentials/oslo_messaging_admin.creds') }}"
-  when: "endpoint.key == 'oslo_messaging'"
+      "{{endpoint.key}}_{{item.key}}_pwd": "{{ lookup('file', inventory_dir+'/credentials/'+endpoint.key+'_'+item.key+'.creds') }}"
+    with_dict:
+    - "{{endpoint.value.auth}}"
+  when: "endpoint.key not in  ['ceph_object_store', 'oslo_db_api', 'oslo_db_cell0'] and item.key not in ['user']"
 
-- name: "Get password for {{endpoint.key}}"
+# Handle exceptions for users which have got one more endpoints
+- name: Get password for rabbitmq endpoint 'user'
   set_fact: 
-    "{{endpoint.key}}_{{item.key}}_pwd": "{{ lookup('file', inventory_dir+'/credentials/'+endpoint.key+'_'+item.key+'.creds') }}"
-  with_dict:
-  - "{{endpoint.value.auth}}"
-  when: "item.key != 'user'"
+    "oslo_messaging_user_pwd": "{{ lookup('file', inventory_dir+'/credentials/oslo_messaging_admin.creds') }}"
+  when: "endpoint.key == 'oslo_messaging'"
+- name: Get password for oslo_db_api, oslo_db_cell0
+  set_fact: 
+    "{{item}}_nova_pwd": "{{ lookup('file', inventory_dir+'/credentials/oslo_db_nova.creds') }}"
+  with_items:
+  - "oslo_db_cell0"
+  - "oslo_db_api"
+  when: "endpoint.key == item"
 
 # Exception for s3 passwords
 - name: "Passwords for {{endpoint.key}}"
