--- a/roles/deploy_osh/tasks/generate_main.yaml
+++ b/roles/deploy_osh/tasks/generate_main.yaml
@@ -10,6 +10,12 @@
     force: true
     dest: "{{inventory_dir}}/artifacts/helm_vars_common.yaml"
   register: helm_vars_common_gen_res
+- name: Generate OSH rabbitmq cookie
+  set_fact:
+    rabbitmq_osh_cookie: "{{oslo_messaging_admin_pwd|hash('md5')}}"
+- name: Generate CONTRAIL rabbitmq cookie
+  set_fact:
+    rabbitmq_contrail_cookie: "{{contrail_endpoints_rabbitmq_pwd|hash('md5')}}"
 - name: Generate cloud credentials
   template:
     src: cloud.yaml.j2
@@ -20,6 +26,12 @@
 - name: Generate libvirt sercet uuid
   set_fact:
     rbd_secret_uuid: "{{identity_cinder_pwd|to_uuid}}"
+- name: Generate horizon sercet key
+  set_fact:
+    horizon_secret_key: "{{oslo_db_horizon_pwd|hash('md5')}}"
+- name: Generate nova metadata sercet key
+  set_fact:
+    metadata_secret_key: "{{identity_neutron_pwd|hash('md5')}}"
 - name: Generate OSH CORE helm override values
   template:
     src: "{{item.name}}.yaml.j2"
@@ -27,3 +39,10 @@
   with_items:
   - "{{components.OSH_CORE}}"
   register: helm_OSH_CORE_gen_res
+- name:  Generate CONTRAIL common override values
+  template:
+    src: helm_vars_contrail_common.yaml.j2
+    force: true
+    dest: "{{inventory_dir}}/artifacts/helm_vars_contrail_common.yaml"
+  register: helm_vars_contrail_common_gen_res
+
