--- a/roles/deploy_osh/tasks/osh-core.yaml
+++ b/roles/deploy_osh/tasks/osh-core.yaml
@@ -17,8 +17,10 @@
   shell: "{{helm_bin}} upgrade --install {{item['item']['name']}} {{playbook_dir}}/{{item['item']['path']}} \
          --namespace={{item['item']['namespace']}} \
          --values={{inventory_dir}}/artifacts/helm_vars_common.yaml \
-         --values={{inventory_dir}}/artifacts/helm_vars_{{item['item']['name']}}.yaml && \
-         {{playbook_dir}}/openstack-helm/tools/deployment/common/wait-for-pods.sh {{item['item']['namespace']}}"
+         --values={{inventory_dir}}/artifacts/helm_vars_{{item['item']['name']}}.yaml \
+         {% if item['item']['name'] not in ['nova'] %}
+         && {{playbook_dir}}/openstack-helm/tools/deployment/common/wait-for-pods.sh {{item['item']['namespace']}}
+         {% endif %}"
   with_items:
   - "{{helm_OSH_CORE_gen_res.results}}"
   when: "helm_vars_common_gen_res.changed or item.changed"
