--- a/roles/prepare-node/tasks/pre-k8s.yaml
+++ b/roles/prepare-node/tasks/pre-k8s.yaml
@@ -12,13 +12,7 @@
   with_nested:
   - "{{ groups['control-plane'] }}" 
   - "{{ endpoints }}"
-- name: Add dns names to hosts for ceph services (when split ceph net)
-  lineinfile: 
-    line: "{{hostvars[item]['ansible_'+ceph_iface]['ipv4']['address']}} {{hostvars[item]['ansible_hostname']}}"
-    path: /etc/hosts
-    state: present
-  with_items:
-  - "{{ groups['k8s-cluster'] }}" 
+  when: "endpoints | length != 0"
 # Separate kubelet, docker logs from other
 - name: Adjust rsyslog
   copy:
