--- a/inventory/helm_vars/components.yaml
+++ b/inventory/helm_vars/components.yaml
@@ -73,3 +73,16 @@ CONTRAIL:
 - name: contrail-vrouter
   namespace: contrail
   path: contrail-helm-deployer/contrail-vrouter
+OS_SUPPL:
+- name: heat
+  path: openstack-helm/heat
+  namespace: openstack
+- name: gnocchi
+  path: openstack-helm-infra/gnocchi
+  namespace: openstack
+- name: elasticsearch
+  path: openstack-helm-infra/elasticsearch
+  namespace: openstack
+- name: ceilometer
+  namespace: openstack
+  path: openstack-helm/ceilometer
