--- a/inventory/helm_vars/images.yaml
+++ b/inventory/helm_vars/images.yaml
@@ -22,6 +22,8 @@ osh:
     image: 'ubuntu-binary-glance-registry'
   heat_api:
     image: 'ubuntu-binary-heat-api'
+  heat_cfn:
+    image: 'ubuntu-binary-heat-api-cfn'
   heat_engine:
     image: 'ubuntu-binary-heat-engine'
   horizon:
@@ -140,8 +142,6 @@ osh:
     link: heat_engine
   glance_db_sync:
     link: glance_api
-  heat_cfn:
-    link: heat_api
   heat_cloudwatch:
     link: heat_api
   heat_db_sync:
@@ -286,3 +286,15 @@ contrail:
     image: "stackanetes/kubernetes-entrypoint"
     repo: quay.io
     tag: v0.2.1
+# Misc images
+gnocchi:
+  gnocchi_storage_init: 
+    image: ubuntu-binary-ceph-base
+  gnocchi_api: 
+    image: ubuntu-binary-gnocchi-base
+  db_sync:
+    link: gnocchi_api
+  gnocchi_statsd:
+    link: gnocchi_api
+  gnocchi_metricd:
+    link: gnocchi_api
